# Euterpea25

./: Euterpea.cabal  README.md  ReadMe.txt
app/: Main.hs
src/: Euterpea.hs
src/Euterpea/: Music.lhs
src/Euterpea/IO/MIDI/: MidiIO.lhs  Play.lhs
